[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scrips/Enemigo.gd" type="Script" id=1]
[ext_resource path="res://Assests/Imagenes/Personajes/enemigo.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.7715, 25.2172 )

[node name="Enemigo" type="Area2D" groups=[
"Enemigos",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 7, 3 )
texture = ExtResource( 2 )

[node name="Colision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="Visibilidad" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.02668, -2.76778 )
scale = Vector2( 2.95326, 2.30602 )
[connection signal="area_entered" from="." to="." method="_on_Enemigo_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemigo_body_entered"]
[connection signal="screen_exited" from="Visibilidad" to="." method="_on_Visibilidad_screen_exited"]
